--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div class="container">
-        
+        <h1>Header H1</h1>
+        <h2>Header H2</h2>
+        <h3>Header H3</h3>
+        <h4>Header H4</h4>
+        <h5>Header H5</h5>
+        <h6>Header H6</h6>
         <div class="row">
             <div class="col-md-4">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt officiis dolorem culpa quidem eos quas molestiae cumque blanditiis optio ullam modi voluptatibus earum labore doloribus nemo amet, officia unde incidunt possimus ut distinctio. Rem rerum eaque sint non minus optio harum, laboriosam iusto tempora est exercitationem suscipit hic vero maiores eligendi porro mollitia beatae debitis asperiores, blanditiis accusamus reprehenderit consequuntur assumenda. Maxime earum ex asperiores repellendus minus vitae, exercitationem alias tenetur suscipit, in aspernatur voluptas tempore quas nemo voluptates sapiente, repellat aliquam? Blanditiis repellendus suscipit temporibus nihil id dolorem debitis praesentium unde, vitae accusamus? Sed aut totam vitae blanditiis minima, distinctio harum excepturi, non repudiandae molestiae natus ab assumenda, quas qui hic veritatis eum impedit magni. Sapiente ipsum mollitia animi cupiditate, voluptates natus aut maxime fugiat doloremque enim, dolor alias laudantium temporibus minima, iure beatae. Omnis voluptatibus quasi, maxime nobis esse dolores possimus odio ratione, ipsam mollitia fugiat consectetur dolorum?</p>
