--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 <p>Delectus totam soluta ut accusamus! Eos iusto, reprehenderit, quos sed blanditiis eligendi fugit adipisci perspiciatis tempore id accusantium corrupti ut quod iure repellat harum voluptatem totam consectetur autem distinctio quidem! At et, rem facilis amet facere quia impedit! Autem nesciunt odio, repellat voluptatibus quis eligendi accusantium, quibusdam sequi corrupti, assumenda placeat laboriosam? Omnis, perferendis ex. Unde impedit similique, facere in consectetur libero tempore autem assumenda illo perspiciatis odit nisi iusto, reprehenderit mollitia nihil omnis! Sapiente commodi, adipisci, quidem repudiandae magni ea numquam inventore, odio vero quos doloribus. Sed totam sequi dolore soluta perferendis iste illo. Deserunt eveniet aliquam voluptatem exercitationem, iure ipsam voluptatibus natus voluptate dicta repellat. Voluptatibus perferendis, nobis veritatis recusandae ad earum natus quia. Tempora, repudiandae! Molestias reprehenderit alias eum iste. Quidem iusto laborum nihil numquam officiis harum alias totam laudantium ex consequuntur minima blanditiis soluta, quam nisi rem. Provident assumenda aspernatur quia accusantium libero voluptatem debitis fugit.</p>
             </div>
         </div>
+        <div class="row">
+            <blockquote>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, omnis. Iste quaerat, ipsam quos soluta maxime natus veniam nihil doloribus consectetur? Doloremque alias labore fuga. Asperiores nesciunt laudantium quas at reiciendis iure odit suscipit iste nam delectus officia ullam velit odio ducimus, quasi molestiae, saepe consectetur aliquam, neque tenetur veritatis! Repudiandae deserunt quo assumenda maxime velit minima consequatur alias numquam nostrum ut labore eius sequi similique culpa minus ipsa placeat quasi ipsam, porro sit eveniet libero, excepturi quibusdam id! Aliquam, id nobis atque in at aspernatur facere repudiandae dicta dolorum doloribus architecto reprehenderit laudantium, veniam illo laboriosam excepturi a ullam!</p>
+                <footer>Pie de cita <cite>Cita</cite></footer>
+            </blockquote>
+        </div>
     </div>
 </body>
 </html>
