--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Header H1 <small>Titulo mas pequeño</small></h1>
-        <h2>Header H2</h2>
-        <h3>Header H3</h3>
-        <h4>Header H4</h4>
-        <h5>Header H5</h5>
-        <h6>Header H6</h6>
+        <h1 class="text-muted">Header H1 <small>Titulo mas pequeño</small></h1>
+        <h2 class="text-primary">Header H2</h2>
+        <h3 class="text-success">Header H3</h3>
+        <h4 class="text-info">Header H4</h4>
+        <h5 class="text-warning">Header H5</h5>
+        <h6 class="text-danger">Header H6</h6>
         <small>Titulo mas pequeño</small>
         <div class="row">
             <div class="col-md-4">
