Colores de fondo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <h4 class="text-info">Header H4</h4>
         <h5 class="text-warning">Header H5</h5>
         <h6 class="text-danger">Header H6</h6>
+        <h1 class="bg-danger">Header H1 <small>Titulo mas pequeño</small></h1>
+        <h2 class="bg-primary">Header H2</h2>
+        <h3 class="bg-success">Header H3</h3>
+        <h4 class="bg-info">Header H4</h4>
+        <h5 class="bg-warning">Header H5</h5>
         <small>Titulo mas pequeño</small>
         <div class="row">
             <div class="col-md-4">
